GH-3664: Simplify reading of test files